# ChatGpt5_Codex

./: .cproject  .gitignore  .gitignore.bak  .project  CMakeLists.txt  CODEX_RESPONSE.md  CODING_PROMPT.txt  partitions.csv  sdkconfig  sdkconfig.old  tool_set_config.json
communications/RS485/: CMakeLists.txt
communications/RS485/include/: modbus_master.h
communications/RS485/src/: modbus_control.c  modbus_master.c  modbus_slaves.c  tcp_log_server.c
communications/WIFI/: CMakeLists.txt
communications/WIFI/src/: mqtt_tcp.c
connectivity/fieldbus/buses/RS485/: CMakeLists.txt
connectivity/fieldbus/buses/RS485/include/: modbus_slaves.h  rs485_central.h  rs485_hw.h  rs485_manager.h  rs485_registry.h  rs485_registry_adapter.h  rs485_sd_adapter.h  tcp_log_server.h
connectivity/fieldbus/buses/RS485/src/: modbus_rtu_master.c  rs485_central.c  rs485_hw.c  rs485_manager.c  rs485_registry.c  rs485_registry_adapter.c  rs485_sd_adapter.c
connectivity/fieldbus/protocols/modbus/: CMakeLists.txt
connectivity/fieldbus/protocols/modbus/include/: modbus_guard_session.h  modbus_master_api.h  modbus_rtu_master.h  modbus_slaves.h
connectivity/fieldbus/protocols/modbus/src/: modbus_guard_session.c  modbus_rtu_master.c  modbus_slaves.c
connectivity/ip/access_network/4G/: CMakeLists.txt
connectivity/ip/access_network/4G/include/: lte_payload_builder.h  lte_ppp_link.h  lte_ppp_test.h  ppp_control.h  sara_r422.h  u_cell_power_strategy.h  u_cell_sms.h
connectivity/ip/access_network/4G/src/: 4G_system_control.c  connectivity.c  lte_payload_builder.c  lte_ppp_link.c  lte_ppp_test.c  ppp_control.c  u_cell_http_connection.c  u_cell_information.c  u_cell_mqtt.c  u_cell_net_reg.c  u_cell_power_strategy.c  u_cell_sms.c
connectivity/ip/access_network/WIFI/: CMakeLists.txt
connectivity/ip/access_network/WIFI/include/: comm_wifi.h  wifi_link.h  wifi_softap_sta.h
connectivity/ip/access_network/WIFI/src/: mqtt_tcp.c  wifi_diag.c  wifi_link.c  wifi_softap_sta.c
connectivity/ip/messaging/http_wifi/: CMakeLists.txt
connectivity/ip/messaging/http_wifi/include/: http_client_esp.h  http_publisher.h  http_wifi_cfg.h
connectivity/ip/messaging/http_wifi/src/: http_client_esp.c  http_publisher.c
connectivity/ip/messaging/mqtt_wifi/: CMakeLists.txt
connectivity/ip/messaging/mqtt_wifi/include/: mqtt_client_esp.h  mqtt_payload_builder.h  mqtt_publisher.h
connectivity/ip/messaging/mqtt_wifi/src/: mqtt_client_esp.c  mqtt_payload_builder.c  mqtt_tcp.c
datalogger/datalogger-control/: CMakeLists.txt  component.mk
datalogger/datalogger-control/include/: 4G_network.h  battery_monitor.h  datalogger_control.h  factory_control.h  ifdef_features.h  led_blink_control.h  pulse_meter.h  sleep_control.h  sleep_preparation.h  wakeup_stub.h
datalogger/datalogger-control/src/: 4G_network.c  battery_monitor.c  config_control.c  factory_control.c  gprs_network_control.c  led_blink_control.c  ota_control.c  pulse_meter.c  sleep_control.c  sleep_preparation.c  wakeup_stub.c
datalogger/datalogger-control/ulp/: pulse_counter.S  sleep_pulse_cnt.S  wake_up.S
datalogger/datalogger-driver/: CMakeLists.txt  component.mk
datalogger/datalogger-driver/include/: TCA6408A.h  ads1015_reader.h  datalogger_driver.h  sdmmc_driver.h
datalogger/datalogger-driver/src/: TCA6408A.c  ads1015_reader.c  config_driver.c  pcnt.c  rs485.c  sdcard_mmc.c  server_comm.c  timer.c  uart_modem.c  wifi_ap.c  wifi_softap_sta.c
libs/modem/: CMakeLists.txt  Kconfig
libs/modem/include/: esp_modem.h  esp_modem_dce.h  esp_modem_dte.h  sarag450.h
libs/modem/src/: esp_modem.c  esp_modem_netif.c
libs/ubxlib/: CMakeLists.txt
libs/ubxlib/api/cell/api/: u_cell_cfg.h  u_cell_info.h  u_cell_net.h
libs/ubxlib/api/cell/src/: u_cell_info.c  u_cell_net.c  u_cell_private.c  u_cell_private.h  u_cell_pwr.c
libs/ubxlib/api/cell/test/: u_cell_test_cfg.h  u_cell_test_private.h
libs/ubxlib/common_api/at_client/api/: u_at_client.h
libs/ubxlib/common_api/device/api/: u_device.h  u_device_serial.h  u_device_serial_wrapped.h
libs/ubxlib/common_api/device/src/: u_device_shared.h
libs/ubxlib/common_api/geofence/api/: u_geofence.h
libs/ubxlib/common_api/http_client/api/: u_http_client.h
libs/ubxlib/common_api/http_client/test/: u_http_client_test_shared_cfg.h
libs/ubxlib/common_api/lib_common/api/: u_lib.h  u_lib_internal.h
libs/ubxlib/common_api/location/api/: u_location.h
libs/ubxlib/common_api/mqtt_client/api/: u_mqtt_client.h  u_mqtt_common.h
libs/ubxlib/common_api/mqtt_client/src/: u_mqtt_client.c
libs/ubxlib/common_api/network/api/: u_network.h
libs/ubxlib/common_api/network/src/: u_network.c  u_network_private_cell.h  u_network_private_cell_stub.c  u_network_shared.h
libs/ubxlib/common_api/network/test/: u_network_test_shared_cfg.h
libs/ubxlib/common_api/security/api/: u_security.h  u_security_credential.h  u_security_tls.h
libs/ubxlib/common_api/short_range/api/: u_short_range.h
libs/ubxlib/common_api/short_range/src/: u_short_range_cfg.h  u_short_range_edm.h  (+1 more)
libs/ubxlib/include/: ubxlib.h
libs/ubxlib/port/clib/: u_port_clib_strtok_r.c
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  main_control.c
main/include/: main.h
peripherals/oled_display/: CMakeLists.txt
peripherals/oled_display/include/: oled_display.h
peripherals/oled_display/src/: images.c  screen_view.c
peripherals/pressure/: CMakeLists.txt
peripherals/pressure/include/: pressure_calibrate.h  pressure_meter.h
peripherals/pressure/src/: pressure_calibrate.c  pressure_meter.c
peripherals/rele/: CMakeLists.txt
peripherals/rele/include/: rele.h
peripherals/rele/src/: rele.c
peripherals/termohigrometro/: CMakeLists.txt
peripherals/termohigrometro/include/: temp_hum_simple.h  temperature_meter.h  temperature_rs485.h  termohigro_meter.h
peripherals/termohigrometro/src/: temp_hum_simple.c  temperature_meter.c  temperature_rs485.c  termohigro_meter.c
system/: CMakeLists.txt
system/include/: adaptive_delay.h  reboot_test.h  system.h
system/src/: adaptive_delay.c  filesystem.c  reboot_test.c  system.c
(+135 files in other folders)
