cmake_minimum_required(VERSION 3.5)

                                             
file(GLOB ubx_srcs_r22 "port/platform/esp-idf/src/*.c"
                   "port/platform/common/debug_utils/src/*.c"
                   "port/platform/common/event_queue/*.c"
                   "port/platform/common/test_util/*.c"
                   "port/clib/*.c"
                   "port/*.c"
                   "common_api/assert/src/*.c"
                   "common_api/at_client/src/*.c"
                   "common_api/device/src/*.c"
                   "common_api/dns/src/*.c"
                   "common_api/short_range/src/*.c"
                   "common_api/network/src/*.c"
                   "common_api/network/test/*.c"
                   "common_api/security/src/*.c"
                   "common_api/sock/src/*.c"
                   "common_api/sock/test/*.c"
                   "common_api/location/src/*.c"
                   "common_api/location/test/*.c"
                   "common_api/mqtt_client/src/*.c"
                   "common_api/utils/src/*.c"
                   "common_api/ubx_protocol/src/*.c"
                   "common_api/geofence/src/*.c"
                   "common_api/timeout/src/*.c"
                   "common_api/http_client/src/*.c"
                   "common_api/http_client/test/*.c"
                   
                   "api/cell/src/*.c"
                   "api/gnss/src/*.c"
                   "api/wifi/src/*.c"
                   "api/ble/src/*.c"
                   "api/cell/test/*.c"

) 
                                          
idf_component_register(SRCS "${ubx_srcs_r22}"
                    INCLUDE_DIRS "include" 
                                  "common_api/error/api"
                                  "common_api/assert/api"
                                  "common_api/type/api"
                                  "common_api/utils/api"
                                  "common_api/device/api"
                                  "common_api/device/src"
                                  "common_api/network/api"
                                  "common_api/network/src"
                                  "common_api/network/test"
                                  "common_api/at_client/api"
                                  "common_api/security/api"
                                  "common_api/sock/api"
                                  "common_api/sock/test"
                                  "common_api/mqtt_client/api"
                                  "common_api/http_client/api"
                                  "common_api/http_client/test"
                                  "common_api/location/api"
                                  "common_api/ubx_protocol/api"
                                  "common_api/spartn/api"
                                  "common_api/timeout/api"
                                  "common_api/short_range/api"
                                  "common_api/short_range/src"
                                  "common_api/short_range/test"
                                  "common_api/dns/api"
                                  "common_api/geofence/api"
                                  "common_api/geofence/src"
                                  "common_api/location/src"
                                  "common_api/location/test"
                                  "port/api"
                                  "port/clib"
                                  "port/platform/common/debug_utils/api"
                                  "port/platform/esp-idf/mcu/esp32/cfg"
                                  "port/platform/esp-idf"
                                  "port/platform/esp-idf/src"
                                  "port/platform/common/event_queue"
                                  "port/platform/common/test_util"
                                  "api/cell/api"
                                  "api/cell/src"
                                  "api/cell/test"
                                  "api/gnss/api"
                                  "api/gnss/src"
                                  "api/gnss/src/lib_mga"
                                  "api/wifi/api" 
                                  "api/wifi/test"
                                  "api/ble/api"   
                     REQUIRES esp_timer
                              driver
                              esp_event
                              esp_netif
                              unity
                             )